5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4160/executions/1593_820.log
== TEST (2019-03-23 22:57:36) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2019

VALOR = input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
valor // 50 = notas_R$50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R$50 = valor % 50

# Quantidade de notas de R$ 10
notas_R$10 = resto_R$50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R$10 = resto_R$50 % 10

# Quantidade de notas de R$ 2
notas_R$2 = resto_R$10 // 2

print(int(notas_R$50))
print(int(notas_R$10))
print(int(notas_R$2))

-- ERROR:
File "XXXX", line 8
    valor // 50 = notas_R$50
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:26:43) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 24 / 04 / 2019

VALOR = input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
valor // 50 = notas_50

# Valor restante a ser sacado com notas menores que R$ 50
resto_50 = valor % 50

# Quantidade de notas de R$ 10
notas_10 = resto_50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_10 = resto_50 % 10

# Quantidade de notas de R$ 2
notas_2 = resto_10 // 2

print(int(notas_50))
print(int(notas_10))
print(int(notas_2))

-- ERROR:
File "XXXX", line 8
    valor // 50 = notas_50
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:28:32) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 25 / 03 / 2019

VALOR = input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
valor // 50 = x

# Valor restante a ser sacado com notas menores que R$ 50
y = valor % 50

# Quantidade de notas de R$ 10
b = y // 10

# Valor restante a ser sacado com notas menores que R$ 50
b = y % 10

# Quantidade de notas de R$ 2
a = b // 2

print(int(x))
print(int(notas_10))
print(int(notas_2))

-- ERROR:
File "XXXX", line 8
    valor // 50 = x
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:28:45) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 25 / 03 / 2019

VALOR = input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
VALOR // 50 = x

# Valor restante a ser sacado com notas menores que R$ 50
y = valor % 50

# Quantidade de notas de R$ 10
b = y // 10

# Valor restante a ser sacado com notas menores que R$ 50
b = y % 10

# Quantidade de notas de R$ 2
a = b // 2

print(int(x))
print(int(notas_10))
print(int(notas_2))

-- ERROR:
File "XXXX", line 8
    VALOR // 50 = x
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:30:03) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 25 / 03 / 2019

VALOR = input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
 x = VALOR // 50 

# Valor restante a ser sacado com notas menores que R$ 50
y = valor % 50

# Quantidade de notas de R$ 10
b = y // 10

# Valor restante a ser sacado com notas menores que R$ 50
b = y % 10

# Quantidade de notas de R$ 2
a = b // 2

print(int(x))
print(int(notas_10))
print(int(notas_2))

-- ERROR:
File "XXXX", line 8
    x = VALOR // 50 
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:30:27) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 25 / 03 / 2019

valor = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
 x = valor // 50 

# Valor restante a ser sacado com notas menores que R$ 50
y = valor % 50

# Quantidade de notas de R$ 10
b = y // 10

# Valor restante a ser sacado com notas menores que R$ 50
b = y % 10

# Quantidade de notas de R$ 2
a = b // 2

print(int(x))
print(int(notas_10))
print(int(notas_2))

-- ERROR:
File "XXXX", line 8
    x = valor // 50 
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:30:47) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 25 / 03 / 2019

valor = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
x = valor // 50 

# Valor restante a ser sacado com notas menores que R$ 50
y = valor % 50

# Quantidade de notas de R$ 10
b = y // 10

# Valor restante a ser sacado com notas menores que R$ 50
b = y % 10

# Quantidade de notas de R$ 2
a = b // 2

print(int(x))
print(int(notas_10))
print(int(notas_2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 23, in <module>
    print(int(notas_10))
NameError: name 'notas_10' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:31:11) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 25 / 03 / 2019

valor = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
x = valor // 50 

# Valor restante a ser sacado com notas menores que R$ 50
y = valor % 50

# Quantidade de notas de R$ 10
b = y // 10

# Valor restante a ser sacado com notas menores que R$ 50
b = y % 10

# Quantidade de notas de R$ 2
a = b // 2

print(int(x))
print(int(y))
print(int(a))

-- OUTPUT:
40
28
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:31:27) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 25 / 03 / 2019

valor = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
x = valor // 50 

# Valor restante a ser sacado com notas menores que R$ 50
y = valor % 50

# Quantidade de notas de R$ 10
b = y // 10

# Valor restante a ser sacado com notas menores que R$ 50
b = y % 10

# Quantidade de notas de R$ 2
a = b // 2

print(int(x))
print(int(b))
print(int(a))

-- OUTPUT:
40
8
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:31:48) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 25 / 03 / 2019

valor = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
x = valor // 50 

# Valor restante a ser sacado com notas menores que R$ 50
y = valor % 50

# Quantidade de notas de R$ 10
b = y // 10

# Valor restante a ser sacado com notas menores que R$ 50
b = y % 10

# Quantidade de notas de R$ 2
a = b // 2

print(int(x))
print(int(b))
print(int(a))

-- EXECUTION TIME:
0.267312
-- TEST CASE 1:
---- input:
2028
---- correct output:
40
2
4
---- user output:
40
8
4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:32:18) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 25 / 03 / 2019

valor = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
x = valor // 50 

# Valor restante a ser sacado com notas menores que R$ 50
y = valor % 50

# Quantidade de notas de R$ 10
b = y // 10

# Valor restante a ser sacado com notas menores que R$ 50
c = y % 10

# Quantidade de notas de R$ 2
a = b // 2

print(int(x))
print(int(c))
print(int(a))

-- EXECUTION TIME:
0.136036
-- TEST CASE 1:
---- input:
2028
---- correct output:
40
2
4
---- user output:
40
8
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:32:21) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 25 / 03 / 2019

valor = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
x = valor // 50 

# Valor restante a ser sacado com notas menores que R$ 50
y = valor % 50

# Quantidade de notas de R$ 10
b = y // 10

# Valor restante a ser sacado com notas menores que R$ 50
c = y % 10

# Quantidade de notas de R$ 2
a = b // 2

print(int(x))
print(int(c))
print(int(a))

-- OUTPUT:
40
8
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:32:33) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 25 / 03 / 2019

valor = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
x = valor // 50 

# Valor restante a ser sacado com notas menores que R$ 50
y = valor % 50

# Quantidade de notas de R$ 10
b = y // 10

# Valor restante a ser sacado com notas menores que R$ 50
b = y % 10

# Quantidade de notas de R$ 2
a = b // 2

print(int(x))
print(int(c))
print(int(a))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 23, in <module>
    print(int(c))
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:32:42) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 25 / 03 / 2019

valor = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
x = valor // 50 

# Valor restante a ser sacado com notas menores que R$ 50
y = valor % 50

# Quantidade de notas de R$ 10
b = y // 10

# Valor restante a ser sacado com notas menores que R$ 50
b = y % 10

# Quantidade de notas de R$ 2
a = b // 2

print(int(x))
print(int(b))
print(int(a))

-- OUTPUT:
40
8
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:34:09) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 25 / 03 / 2019

valor = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
x = valor // 50 

# Valor restante a ser sacado com notas menores que R$ 50
y = valor % 50

# Quantidade de notas de R$ 10
b = y // 10

# Valor restante a ser sacado com notas menores que R$ 50


# Quantidade de notas de R$ 2
a = b // 2

print(int(x))
print(int(b))
print(int(a))

-- OUTPUT:
40
2
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:34:58) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 25 / 03 / 2019

valor = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
x = valor // 50 

# Valor restante a ser sacado com notas menores que R$ 50
y = valor % 50

# Quantidade de notas de R$ 10
b = y // 10

# Valor restante a ser sacado com notas menores que R$ 50
b = y % 10

# Quantidade de notas de R$ 2
a = b // 2

print(int(x))
print(int(b))
print(int(a))

-- OUTPUT:
40
8
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:37:07) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 25 / 03 / 2019

valor = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
x = valor // 50 

# Valor restante a ser sacado com notas menores que R$ 50
y = valor % 50

# Quantidade de notas de R$ 10
b = y // 10

# Valor restante a ser sacado com notas menores que R$ 50
b = y % 10
d = y % 10
# Quantidade de notas de R$ 2
a = b // 2

print(int(x))
print(int(d))
print(int(a))

-- OUTPUT:
40
8
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:39:01) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 25 / 03 / 2019

valor = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
x = valor // 50 

# Valor restante a ser sacado com notas menores que R$ 50
y = valor % 50

# Quantidade de notas de R$ 10
b = y // 10

# Valor restante a ser sacado com notas menores que R$ 50

d = y % 10
# Quantidade de notas de R$ 2
a = b // 2

print(int(x))
print(int(d))
print(int(a))

-- OUTPUT:
40
8
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:39:25) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 25 / 03 / 2019

valor = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
x = valor // 50 

# Valor restante a ser sacado com notas menores que R$ 50
y = valor % 50

# Quantidade de notas de R$ 10
b = y // 10

# Valor restante a ser sacado com notas menores que R$ 50

d = y % 10
# Quantidade de notas de R$ 2
a = d // 2

print(int(x))
print(int(d))
print(int(a))

-- OUTPUT:
40
8
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:42:28) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 25 / 03 / 2019

valor = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
x = valor // 50 

# Valor restante a ser sacado com notas menores que R$ 50
y = valor % 50

# Quantidade de notas de R$ 10
b = y // 10

# Valor restante a ser sacado com notas menores que R$ 50
d = (y % 10) - 5

# Quantidade de notas de R$ 2
a = d // 2

print(int(x))
print(int(d))
print(int(a))

-- OUTPUT:
40
3
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:42:40) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 25 / 03 / 2019

valor = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
x = valor // 50 

# Valor restante a ser sacado com notas menores que R$ 50
y = valor % 50

# Quantidade de notas de R$ 10
b = y // 10

# Valor restante a ser sacado com notas menores que R$ 50
d = (y % 10) - 5

# Quantidade de notas de R$ 2
a = b // 2

print(int(x))
print(int(d))
print(int(a))

-- OUTPUT:
40
3
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:43:36) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 25 / 03 / 2019

valor = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
x = valor // 50 

# Valor restante a ser sacado com notas menores que R$ 50
y = valor % 50

# Quantidade de notas de R$ 10
b = y // 10
e = y % 10
# Valor restante a ser sacado com notas menores que R$ 50
d = (y % 10) - 5

# Quantidade de notas de R$ 2
a = e // 2

print(int(x))
print(int(d))
print(int(a))

-- OUTPUT:
40
3
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:43:42) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 25 / 03 / 2019

valor = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
x = valor // 50 

# Valor restante a ser sacado com notas menores que R$ 50
y = valor % 50

# Quantidade de notas de R$ 10
b = y // 10
e = y % 10
# Valor restante a ser sacado com notas menores que R$ 50
d = (y % 10) - 5

# Quantidade de notas de R$ 2
a = e // 2

print(int(x))
print(int(d))
print(int(a))

-- EXECUTION TIME:
0.147986
-- TEST CASE 1:
---- input:
2028
---- correct output:
40
2
4
---- user output:
40
3
4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:44:29) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 25 / 03 / 2019

valor = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
x = valor // 50 

# Valor restante a ser sacado com notas menores que R$ 50
y = valor % 50

# Quantidade de notas de R$ 10
b = y // 10
e = y % 10
# Valor restante a ser sacado com notas menores que R$ 50
d = y // 10 

# Quantidade de notas de R$ 2
a = e // 2

print(int(x))
print(int(d))
print(int(a))

-- OUTPUT:
40
2
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:44:34) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 25 / 03 / 2019

valor = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
x = valor // 50 

# Valor restante a ser sacado com notas menores que R$ 50
y = valor % 50

# Quantidade de notas de R$ 10
b = y // 10
e = y % 10
# Valor restante a ser sacado com notas menores que R$ 50
d = y // 10 

# Quantidade de notas de R$ 2
a = e // 2

print(int(x))
print(int(d))
print(int(a))

-- EXECUTION TIME:
0.185879
-- TEST CASE 1:
---- input:
2028
---- correct output:
40
2
4
---- user output:
40
2
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 19:07:22) 
-- CODE:
# Instituto de Computacao -nUFAM
# Lab 01 - Ex 10
# 25 / 03 / 2019

valor = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
x = valor // 50 

# Valor restante a ser sacado com notas menores que R$ 50
y = valor % 50

# Quantidade de notas de R$ 10
b = y // 10
e = y % 10
# Valor restante a ser sacado com notas menores que R$ 50
d = y // 10 

# Quantidade de notas de R$ 2
a = e // 2

print(int(x))
print(int(d))
print(int(a))

-- EXECUTION TIME:
0.156516
-- TEST CASE 1:
---- input:
2028
---- correct output:
40
2
4
---- user output:
40
2
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 19:07:59) 
-- CODE:
# Instituto de Computacao -UFAM
# Lab 01 - Ex 10
# 25 / 03 / 2019

valor = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
x = valor // 50 

# Valor restante a ser sacado com notas menores que R$ 50
y = valor % 50

# Quantidade de notas de R$ 10
b = y // 10
e = y % 10
# Valor restante a ser sacado com notas menores que R$ 50
d = y // 10 

# Quantidade de notas de R$ 2
a = e // 2

print(int(x))
print(int(d))
print(int(a))

-- EXECUTION TIME:
0.133956
-- TEST CASE 1:
---- input:
2028
---- correct output:
40
2
4
---- user output:
40
2
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 19:08:03) 
-- CODE:
# Instituto de Computacao -UFAM
# Lab 01 - Ex 10
# 25 / 03 / 2019

valor = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
x = valor // 50 

# Valor restante a ser sacado com notas menores que R$ 50
y = valor % 50

# Quantidade de notas de R$ 10
b = y // 10
e = y % 10
# Valor restante a ser sacado com notas menores que R$ 50
d = y // 10 

# Quantidade de notas de R$ 2
a = e // 2

print(int(x))
print(int(d))
print(int(a))

-- EXECUTION TIME:
0.221274
-- TEST CASE 1:
---- input:
2028
---- correct output:
40
2
4
---- user output:
40
2
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 19:09:18) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 25 / 03 / 2019

valor = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
x = valor // 50 

# Valor restante a ser sacado com notas menores que R$ 50
y = valor % 50

# Quantidade de notas de R$ 10
b = y // 10
e = y % 10
# Valor restante a ser sacado com notas menores que R$ 50
d = y // 10 

# Quantidade de notas de R$ 2
a = e // 2

print(int(x))
print(int(d))
print(int(a))

-- EXECUTION TIME:
0.168395
-- TEST CASE 1:
---- input:
2028
---- correct output:
40
2
4
---- user output:
Qual o valor do saque? 40
2
4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 19:09:23) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 25 / 03 / 2019

valor = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
x = valor // 50 

# Valor restante a ser sacado com notas menores que R$ 50
y = valor % 50

# Quantidade de notas de R$ 10
b = y // 10
e = y % 10
# Valor restante a ser sacado com notas menores que R$ 50
d = y // 10 

# Quantidade de notas de R$ 2
a = e // 2

print(int(x))
print(int(d))
print(int(a))

-- EXECUTION TIME:
0.216877
-- TEST CASE 1:
---- input:
2028
---- correct output:
40
2
4
---- user output:
40
2
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
